--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "skynet-discord-bot",
-  "version": "1.0.0",
-  "description": "discord bot for 42ip discord server",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Pranay0302/skynet-discord-bot.git"
-  },
-  "author": "Pranay Kumar Andra",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Pranay0302/skynet-discord-bot/issues"
-  },
-  "homepage": "https://github.com/Pranay0302/skynet-discord-bot#readme"
+    "name": "skynet-discord-bot",
+    "version": "1.0.0",
+    "description": "discord bot for 42ip discord server",
+    "main": "main.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node ./src/main.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Pranay0302/skynet-discord-bot.git"
+    },
+    "author": "Pranay Kumar Andra",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Pranay0302/skynet-discord-bot/issues"
+    },
+    "homepage": "https://github.com/Pranay0302/skynet-discord-bot#readme"
 }
