--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "main.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node ./src/main.js &"
+        "start": "nohup node ./src/main.js &",
+        "find": "ps -ef | grep '/src/main.js'"
     },
     "repository": {
         "type": "git",
