--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
     "bugs": {
         "url": "https://github.com/Pranay0302/skynet-discord-bot/issues"
     },
-    "homepage": "https://github.com/Pranay0302/skynet-discord-bot#readme"
+    "homepage": "https://github.com/Pranay0302/skynet-discord-bot#readme",
+    "dependencies": {
+        "discord.js": "^12.3.1",
+        "dotenv": "^8.2.0",
+        "node-fetch": "^2.6.1",
+        "superagent": "^6.1.0"
+    }
 }
