--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "main.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nohup node ./src/main.js &",
+        "start": "nohup /home/ubuntu/.nvm/versions/node/v14.13.0/bin/node ./src/main.js &",
         "find": "ps -ef | grep '/src/main.js'"
     },
     "repository": {
